editors/tree-sitter/test/corpus/core.txt
==================
EBNF declarations, statements, and expressions
==================
space demo;
use demo::io as io;

/* Outer block /* nested block */ comments are trivia. */
const answer: i32 = 40 + 2;
const decimal: f64 = 1.0;
const trailing_decimal: f64 = 1.;
const trailing_decimal_exponent: f64 = 1.e2;
const hexadecimal_float: f64 = 0x1.p2;
const separated_integer: i32 = 1_000;
const message: string = "line\n";
const escaped_character: char = '\U00000041';

form Pair<T> {
  first: T,
  second: T;
}

pick Result<T> { Ok(T), Err(i32), }

proc main(value: i32) -> i32
  requires value >= 0;
  ensures value >= 0;
{
  let mut result: i32 = value ?? 0;
  for index in 0..=2 {
    set result += index;
  }
  match result {
    0 => 1,
    _ => result,
  }
}

---

(source_file
  (declaration
    (declaration_body
      (space_declaration
        (path
          (identifier)))))
  (declaration
    (declaration_body
      (use_declaration
        (module_path)
        (identifier))))
  (block_comment
    (block_comment))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (integer_literal)))))))
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (integer_literal)))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (float_literal)))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (float_literal
                                            (trailing_decimal_float))))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (float_literal
                                            (trailing_decimal_float))))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (float_literal)))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (integer_literal)))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (string_literal
                                            (escape_sequence))))))))))))))))))))))
  (declaration
    (declaration_body
      (value_declaration
        (identifier)
        (type
          (path_type
            (path
              (identifier))))
        (expression
          (coalesce_expression
            (logical_or_expression
              (logical_and_expression
                (bitwise_or_expression
                  (bitwise_xor_expression
                    (bitwise_and_expression
                      (equality_expression
                        (comparison_expression
                          (shift_expression
                            (additive_expression
                              (multiplicative_expression
                                (range_expression
                                  (unary_expression
                                    (postfix_expression
                                      (primary_expression
                                        (literal
                                          (character_literal
                                            (escape_sequence))))))))))))))))))))))
  (declaration
    (declaration_body
      (form_declaration
        (identifier)
        (generic_parameters
          (generic_parameter
            (identifier)))
        (field_list
          (field
            (identifier)
            (type
              (path_type
                (path
                  (identifier)))))
          (field
            (identifier)
            (type
              (path_type
                (path
                  (identifier)))))))))
  (declaration
    (declaration_body
      (pick_declaration
        (identifier)
        (generic_parameters
          (generic_parameter
            (identifier)))
        (variant
          (identifier)
          (type
            (path_type
              (path
                (identifier)))))
        (variant
          (identifier)
          (type
            (path_type
              (path
                (identifier))))))))
  (declaration
    (declaration_body
      (procedure_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (type
              (path_type
                (path
                  (identifier))))))
        (type
          (path_type
            (path
              (identifier))))
        (contract_clause
          (expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (bitwise_or_expression
                    (bitwise_xor_expression
                      (bitwise_and_expression
                        (equality_expression
                          (comparison_expression
                            (shift_expression
                              (additive_expression
                                (multiplicative_expression
                                  (range_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (path
                                            (identifier)))))))))
                            (shift_expression
                              (additive_expression
                                (multiplicative_expression
                                  (range_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (literal
                                            (integer_literal)))))))))))))))))))
        (contract_clause
          (expression
            (coalesce_expression
              (logical_or_expression
                (logical_and_expression
                  (bitwise_or_expression
                    (bitwise_xor_expression
                      (bitwise_and_expression
                        (equality_expression
                          (comparison_expression
                            (shift_expression
                              (additive_expression
                                (multiplicative_expression
                                  (range_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (path
                                            (identifier)))))))))
                            (shift_expression
                              (additive_expression
                                (multiplicative_expression
                                  (range_expression
                                    (unary_expression
                                      (postfix_expression
                                        (primary_expression
                                          (literal
                                            (integer_literal)))))))))))))))))))
        (block
          (statement
            (let_statement
              (identifier)
              (type
                (path_type
                  (path
                    (identifier))))
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (path
                                                (identifier))))))))))))))))
                  (coalesce_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (range_expression
                                          (unary_expression
                                            (postfix_expression
                                              (primary_expression
                                                (literal
                                                  (integer_literal)))))))))))))))))))))
          (statement
            (for_statement
              (identifier)
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (literal
                                                (integer_literal)))))
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (literal
                                                (integer_literal))))))))))))))))))
              (block
                (statement
                  (set_statement
                    (expression
                      (assignment_expression
                        (coalesce_expression
                          (logical_or_expression
                            (logical_and_expression
                              (bitwise_or_expression
                                (bitwise_xor_expression
                                  (bitwise_and_expression
                                    (equality_expression
                                      (comparison_expression
                                        (shift_expression
                                          (additive_expression
                                            (multiplicative_expression
                                              (range_expression
                                                (unary_expression
                                                  (postfix_expression
                                                    (primary_expression
                                                      (path
                                                        (identifier)))))))))))))))))
                        (expression
                          (coalesce_expression
                            (logical_or_expression
                              (logical_and_expression
                                (bitwise_or_expression
                                  (bitwise_xor_expression
                                    (bitwise_and_expression
                                      (equality_expression
                                        (comparison_expression
                                          (shift_expression
                                            (additive_expression
                                              (multiplicative_expression
                                                (range_expression
                                                  (unary_expression
                                                    (postfix_expression
                                                      (primary_expression
                                                        (path
                                                          (identifier)))))))))))))))))))))))))
          (statement
            (match_statement
              (expression
                (coalesce_expression
                  (logical_or_expression
                    (logical_and_expression
                      (bitwise_or_expression
                        (bitwise_xor_expression
                          (bitwise_and_expression
                            (equality_expression
                              (comparison_expression
                                (shift_expression
                                  (additive_expression
                                    (multiplicative_expression
                                      (range_expression
                                        (unary_expression
                                          (postfix_expression
                                            (primary_expression
                                              (path
                                                (identifier))))))))))))))))))
              (match_arm
                (expression
                  (coalesce_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (range_expression
                                          (unary_expression
                                            (postfix_expression
                                              (primary_expression
                                                (literal
                                                  (integer_literal))))))))))))))))))
                (expression
                  (coalesce_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (range_expression
                                          (unary_expression
                                            (postfix_expression
                                              (primary_expression
                                                (literal
                                                  (integer_literal)))))))))))))))))))
              (match_arm
                (expression
                  (coalesce_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (range_expression
                                          (unary_expression
                                            (postfix_expression
                                              (primary_expression
                                                (path
                                                  (identifier))))))))))))))))))
                (expression
                  (coalesce_expression
                    (logical_or_expression
                      (logical_and_expression
                        (bitwise_or_expression
                          (bitwise_xor_expression
                            (bitwise_and_expression
                              (equality_expression
                                (comparison_expression
                                  (shift_expression
                                    (additive_expression
                                      (multiplicative_expression
                                        (range_expression
                                          (unary_expression
                                            (postfix_expression
                                              (primary_expression
                                                (path
                                                  (identifier))))))))))))))))))))))))))
